--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "root",
   "private": true,
+  "scripts": {
+    "lint": "eslint ./packages --quiet --ext .js,.ts,.tsx --config ./.eslintrc.js",
+    "prettier": "npx prettier --write '**/*.{js,jsx,ts,tsx}'"
+  },
   "devDependencies": {
-    "lerna": "^3.20.2"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "lerna": "^3.20.2",
+    "prettier": "^1.19.1"
   }
 }
