--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "npm run prettier",
-      "npm run lint --",
-      "npm run test -- --findRelatedTests"
+      "npm run lint --"
     ]
   },
   "husky": {
@@ -18,8 +17,11 @@
     }
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^7.0.0",
     "eslint-config-node": "^4.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
@@ -31,6 +33,7 @@
     "husky": "^4.2.3",
     "lerna": "^3.20.2",
     "lint-staged": "^10.0.8",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.8.3"
   }
 }
