--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "dependencies": {},
   "devDependencies": {
     "@boozingeorge/config": "file:packages/config",
+    "@commitlint/cli": "^8.3.5",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "lerna": "^3.20.2",
