--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -21,6 +21,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/config-lerna-scopes": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -33,5 +35,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^8.3.5"
   }
 }
