--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "root",
   "private": true,
+  "engines": {
+    "node": ">=12.0.0",
+    "npm" : ">=6.0.0"
+  },
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist --ignore-scripts",
     "clean": "lerna clean --yes",
