--- a/packages/impulse/package.json
+++ b/packages/impulse/package.json
@@ -6,6 +6,10 @@
   "homepage": "https://github.com/boozingeorge/earth#readme",
   "license": "ISC",
   "main": "src/index.ts",
+  "engines": {
+    "node": ">=12.0.0",
+    "npm" : ">=6.0.0"
+  },
   "files": [
     "dist"
   ],
@@ -14,9 +18,22 @@
     "url": "git+https://github.com/boozingeorge/earth.git"
   },
   "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
     "url": "https://github.com/boozingeorge/earth/issues"
+  },
+  "dependencies": {
+    "next": "^9.3.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.1",
+    "@types/react": "^16.9.23",
+    "typescript": "^3.8.3"
   }
 }
