--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,7 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "es2015",
-    "module": "es6",
-    "lib": ["es2016", "es2017", "dom"],
-    "jsx": "react",
-    "strict": true,
-    "sourceMap": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "removeComments": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
-    "downlevelIteration": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+  "extends": "@boozingeorge/config/typescript/tsconfig",
+  "typeRoots": ["./typings"],
+  "include": ["packages/**/*"],
+  "exclude": ["node_modules", "dist"],
+  "outDir": "./dist"
 }
