--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,18 +5,22 @@
   "author": "George Boozin <boozingeorge@gmail.com>",
   "homepage": "https://github.com/boozingeorge/earth#readme",
   "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/boozingeorge/earth.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "clean:package-lock": "rm -rf package-lock.json"
   },
   "bugs": {
     "url": "https://github.com/boozingeorge/earth/issues"
   },
   "peerDependencies": {
-    "@commitlint/cli": "^8.3.5",
+    "@commitlint/cli": "11.0.0",
     "eslint": "^6.8.0",
     "typescript": "^3.8.3"
   },
@@ -37,6 +41,6 @@
     "eslint-plugin-react-hooks": "^2.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5"
+    "@commitlint/cli": "^11.0.0"
   }
 }
