--- a/packages/impulse/package.json
+++ b/packages/impulse/package.json
@@ -22,7 +22,9 @@
     "build": "next build",
     "start": "next start",
     "start:port": "next start -p $PORT",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "echo \"Error: run tests from root\" && exit 1",
+    "clean:build": "rm -rf .next",
+    "clean:package-lock": "rm -rf package-lock.json"
   },
   "bugs": {
     "url": "https://github.com/boozingeorge/earth/issues"
